--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
       <header id="header"></header>
 
       <main>
-        <section id="hero"></section>
+        <section id="hero" class="hero-section">
+          <h1 class="main-title">ТУРИ ПОДОРОЖІ ПОЇЗДКИ</h1>
+          <h2>Travel with me</h2>
+        </section>
         <section id="about"></section>
       </main>
 
