--- a/index.html
+++ b/index.html
@@ -8,12 +8,24 @@
   </head>
   <body>
     <div id="app">
-      <header id="header"></header>
+      <header id="header">
+        <nav class="navigation">
+          <a href="#">Trip <small>with</small> Kati</a>
+          <ul class="nav-list">
+            <li>
+              <a href="./index.html" class="nav-points nav-studio">Про нас</a>
+            </li>
+            <li><a href="" class="nav-points">Актуальні тури</a></li>
+            <li><a href="" class="nav-points">Попередні тури</a></li>
+            <li><a href="" class="nav-points">Про бронювання</a></li>
+          </ul>
+        </nav>
+      </header>
 
       <main>
         <section id="hero" class="hero-section">
-          <h1 class="main-title">ТУРИ ПОДОРОЖІ ПОЇЗДКИ</h1>
-          <h2>Travel with me</h2>
+          <!-- <h1 class="main-title">ТУРИ ПОДОРОЖІ ПОЇЗДКИ</h1>
+          <h2>Travel with me</h2> -->
         </section>
         <section id="about"></section>
       </main>
