delete some files, create markup

--- a/index.html
+++ b/index.html
@@ -5,33 +5,79 @@
     <link rel="icon" type="image/svg+xml" href="/travel.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Travel Site</title>
+    <link rel="stylesheet" href="/src/style.css" />
   </head>
   <body>
-    <div id="app">
-      <header id="header">
-        <nav class="navigation">
-          <a href="#">Trip <small>with</small> Kati</a>
-          <ul class="nav-list">
-            <li>
-              <a href="./index.html" class="nav-points nav-studio">Про нас</a>
-            </li>
-            <li><a href="" class="nav-points">Актуальні тури</a></li>
-            <li><a href="" class="nav-points">Попередні тури</a></li>
-            <li><a href="" class="nav-points">Про бронювання</a></li>
-          </ul>
-        </nav>
-      </header>
+    <header id="header">
+      <nav class="navigation">
+        <a href="#" class="logo">Trip <small>with</small> Kati</a>
+        <ul class="nav-list">
+          <li><a href="./index.html">Про нас</a></li>
+          <li><a href="">Актуальні тури</a></li>
+          <li><a href="">Про бронювання</a></li>
+          <li><a href="">Попередні тури</a></li>
+          <li><a href="">Контакти</a></li>
+        </ul>
+      </nav>
+    </header>
 
-      <main>
-        <section id="hero" class="hero-section">
-          <!-- <h1 class="main-title">ТУРИ ПОДОРОЖІ ПОЇЗДКИ</h1>
-          <h2>Travel with me</h2> -->
-        </section>
-        <section id="about"></section>
-      </main>
+    <main>
+      <section id="main" class="main-section">
+        <h1 class="main-title">ТУРИ ПОДОРОЖІ ПОЇЗДКИ</h1>
+        <h2>Пригоди створюємо разом</h2>
+      </section>
 
-      <footer id="footer"></footer>
-    </div>
+      <section id="about">
+        <p>
+          Про нас - Подорожі, що змінюють За плечима — 48 країн Європи, Азії та
+          Північної Америки: від Грузії, Йорданії та Ізраїлю — до Ісландії,
+          Канади та США. Подорожі з нами — це: • Лайфхаки та інсайти, перевірені
+          власним досвідом • Атмосфера дружньої компанії, де кожен відчуває себе
+          своїм • Вихід із зони комфорту в найприємніший спосіб • Курйозні
+          історії та моменти, які пам’ятаєш все життя Ми створюємо пригоди, що
+          надихають рухатися далі. Приєднуйтесь до Kati Trip — і давайте
+          відкривати світ разом! ✈️
+        </p>
+      </section>
+
+      <section id="advantages">
+        <h2>Чому обирають Kati Trip?</h2>
+        <ul>
+          <li>
+            <p>
+              Малі групи 4–7 людей — тепло, комфорт і справжня дружня атмосфера.
+            </p>
+          </li>
+          <li>
+            <p>Супровід 24/7 — ми завжди поруч, щоб підтримати і допомогти.</p>
+          </li>
+          <li>
+            <p>
+              Груповий чат до і під час подорожі — спілкування, поради та обмін
+              емоціями на кожному кроці.
+            </p>
+          </li>
+          <li>
+            <p>
+              Tips for Trips — практичні лайфхаки, які допоможуть подорожувати
+              легко і впевнено.
+            </p>
+          </li>
+          <li>
+            <p>
+              Індивідуальний підхід і увага до деталей — кожен важливий для нас.
+            </p>
+          </li>
+        </ul>
+      </section>
+
+      <section id="actual"></section>
+
+      <section id="about"></section>
+    </main>
+
+    <footer id="footer"></footer>
+
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
