add basic styles

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/src/style.css" />
   </head>
   <body>
-    <header id="header">
+    <header class="header container">
       <nav class="navigation">
         <a href="#" class="logo">Trip <small>with</small> Kati</a>
         <ul class="nav-list">
@@ -22,12 +22,12 @@
     </header>
 
     <main>
-      <section id="main" class="main-section">
+      <section class="main-section container">
         <h1 class="main-title">ТУРИ ПОДОРОЖІ ПОЇЗДКИ</h1>
         <h2>Пригоди створюємо разом</h2>
       </section>
 
-      <section id="about">
+      <section class="about container">
         <p>
           Про нас - Подорожі, що змінюють За плечима — 48 країн Європи, Азії та
           Північної Америки: від Грузії, Йорданії та Ізраїлю — до Ісландії,
@@ -40,7 +40,7 @@
         </p>
       </section>
 
-      <section id="advantages">
+      <section class="advantages container">
         <h2>Чому обирають Kati Trip?</h2>
         <ul>
           <li>
@@ -71,9 +71,9 @@
         </ul>
       </section>
 
-      <section id="actual"></section>
+      <section class="actual container"></section>
 
-      <section id="about"></section>
+      <section class="about container"></section>
     </main>
 
     <footer id="footer"></footer>
