add svg and modern normalize

--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <link rel="icon" type="image/svg+xml" href="/travel.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Travel Site</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="/src/style.css" />
   </head>
   <body>
@@ -16,7 +23,9 @@
           <li><a href="">Актуальні тури</a></li>
           <li><a href="">Про бронювання</a></li>
           <li><a href="">Попередні тури</a></li>
-          <li><a href="">Контакти</a></li>
+          <li>
+            <a href="">Контакти </a>
+          </li>
         </ul>
       </nav>
     </header>
