style main section

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </nav> -->
 
       <button class="menu-button" type="button">
-        <svg class="menu-icon" width="20" height="20">
+        <svg class="menu-icon">
           <use href="./public/icons.svg#icon-burger"></use>
         </svg>
       </button>
@@ -46,8 +46,11 @@
 
     <main>
       <section class="main-section container">
-        <h1 class="main-title">ТУРИ ПОДОРОЖІ ПОЇЗДКИ</h1>
-        <h2>Пригоди створюємо разом</h2>
+        <h1 class="main-title">ПОЇЗДКИ ТУРИ ПОДОРОЖІ</h1>
+        <h2 class="main-subtitle">Пригоди створюємо разом</h2>
+        <button type="button" class="main-button">
+          Подивитись актуальні тури
+        </button>
       </section>
 
       <section class="about container" id="about">
