--- a/index.html
+++ b/index.html
@@ -48,21 +48,32 @@
       <section class="main-section container">
         <h1 class="main-title">ПОЇЗДКИ ТУРИ ПОДОРОЖІ</h1>
         <h2 class="main-subtitle">Пригоди створюємо разом</h2>
-        <button type="button" class="main-button">
-          Подивитись актуальні тури
-        </button>
+        <a href="#actual" class="main-button"> Подивитись актуальні тури </a>
       </section>
 
-      <section class="about container" id="about">
+      <section class="about-section container" id="about">
+        <h2 class="section-title">Про нас</h2>
+        <h3>Подорожі, що змінюють</h3>
         <p>
-          Про нас - Подорожі, що змінюють За плечима — 48 країн Європи, Азії та
-          Північної Америки: від Грузії, Йорданії та Ізраїлю — до Ісландії,
-          Канади та США. Подорожі з нами — це: • Лайфхаки та інсайти, перевірені
-          власним досвідом • Атмосфера дружньої компанії, де кожен відчуває себе
-          своїм • Вихід із зони комфорту в найприємніший спосіб • Курйозні
-          історії та моменти, які пам’ятаєш все життя Ми створюємо пригоди, що
-          надихають рухатися далі. Приєднуйтесь до Kati Trip — і давайте
-          відкривати світ разом! ✈️
+          За плечима —<br />48 країн Європи, Азії та Північної Америки:<br />від
+          Грузії, Йорданії та Ізраїлю<br />до Ісландії, Канади та США.
+        </p>
+        <!-- <svg class="around-the-world-icon">
+          <use
+            href="./public/travel-around-the-world-world-svgrepo-com.svg"
+          ></use>
+        </svg> -->
+
+        <h3>Подорожі з нами — це:</h3>
+        <ul class="about-list">
+          <li>Лайфхаки та інсайти, перевірені власним досвідом</li>
+          <li>Атмосфера дружньої компанії, де кожен відчуває себе своїм</li>
+          <li>Вихід із зони комфорту в найприємніший спосіб</li>
+          <li>Курйозні історії та моменти, які пам’ятаєш все життя</li>
+        </ul>
+        <p class="final-text-about">
+          Ми створюємо пригоди, що надихають рухатися далі. Приєднуйтесь до
+          <strong>Kati Trip</strong> — і давайте відкривати світ разом!
         </p>
       </section>
 
@@ -97,7 +108,7 @@
         </ul>
       </section>
 
-      <section class="actual container"></section>
+      <section class="actual container" id="actual"></section>
 
       <section class="about container"></section>
     </main>
