style advantage section

--- a/index.html
+++ b/index.html
@@ -77,33 +77,23 @@
         </p>
       </section>
 
-      <section class="advantages container">
-        <h2>Чому обирають Kati Trip?</h2>
-        <ul>
+      <section class="advantages-section container">
+        <h2 class="section-title">Чому обирають Kati Trip?</h2>
+        <ul class="advantages-list">
           <li>
-            <p>
-              Малі групи 4–7 людей — тепло, комфорт і справжня дружня атмосфера.
-            </p>
+            Малі групи 4–7 людей — тепло, комфорт і справжня дружня атмосфера.
+          </li>
+          <li>Супровід 24/7 — ми завжди поруч, щоб підтримати і допомогти.</li>
+          <li>
+            Груповий чат до і під час подорожі — спілкування, поради та обмін
+            емоціями на кожному кроці.
           </li>
           <li>
-            <p>Супровід 24/7 — ми завжди поруч, щоб підтримати і допомогти.</p>
+            Tips for Trips — практичні лайфхаки, які допоможуть подорожувати
+            легко і впевнено.
           </li>
           <li>
-            <p>
-              Груповий чат до і під час подорожі — спілкування, поради та обмін
-              емоціями на кожному кроці.
-            </p>
-          </li>
-          <li>
-            <p>
-              Tips for Trips — практичні лайфхаки, які допоможуть подорожувати
-              легко і впевнено.
-            </p>
-          </li>
-          <li>
-            <p>
-              Індивідуальний підхід і увага до деталей — кожен важливий для нас.
-            </p>
+            Індивідуальний підхід і увага до деталей — кожен важливий для нас.
           </li>
         </ul>
       </section>
