--- a/index.html
+++ b/index.html
@@ -15,87 +15,102 @@
     <link rel="stylesheet" href="/src/style.css" />
   </head>
   <body>
-    <header class="header container">
-      <a href="#" class="logo"
-        ><div>Kati</div>
-        <div>Trip</div></a
-      >
+    <header class="header">
+      <div class="container">
+        <div class="header-content">
+          <a href="#" class="logo"
+            ><div>Kati</div>
+            <div>Trip</div></a
+          >
 
-      <!-- <div id="desctop-navigation"></div> -->
+          <!-- <div id="desctop-navigation"></div> -->
 
-      <!-- <nav>
-        <ul class="nav-list">
-          <li><a href="#about">Про нас</a></li>
-          <li><a href="">Актуальні тури</a></li>
-          <li><a href="">Про бронювання</a></li>
-          <li><a href="">Попередні тури</a></li>
-          <li>
-            <a href="">Контакти </a>
-          </li>
-        </ul>
-      </nav> -->
+          <!-- <nav>
+          <ul class="nav-list">
+            <li><a href="#about">Про нас</a></li>
+            <li><a href="">Актуальні тури</a></li>
+            <li><a href="">Про бронювання</a></li>
+            <li><a href="">Попередні тури</a></li>
+            <li>
+              <a href="">Контакти </a>
+            </li>
+          </ul>
+        </nav> -->
 
-      <button class="menu-button" type="button">
-        <svg class="menu-icon">
-          <use href="./public/icons.svg#icon-burger"></use>
-        </svg>
-      </button>
-
-      <div id="mobile-navigation"></div>
+          <button class="menu-button" type="button">
+            <svg class="menu-icon">
+              <use href="./public/icons.svg#icon-burger"></use>
+            </svg>
+          </button>
+        </div>
+        <div id="mobile-navigation"></div>
+      </div>
     </header>
 
     <main>
-      <section class="main-section container">
-        <h1 class="main-title">ПОЇЗДКИ ТУРИ ПОДОРОЖІ</h1>
-        <h2 class="main-subtitle">Пригоди створюємо разом</h2>
-        <a href="#actual" class="main-button"> Подивитись актуальні тури </a>
+      <section class="main-section">
+        <div class="container">
+          <div class="main-content">
+            <h1 class="main-title">ПОЇЗДКИ ТУРИ ПОДОРОЖІ</h1>
+            <h2 class="main-subtitle">Пригоди створюємо разом</h2>
+            <a href="#actual" class="main-button">
+              Подивитись актуальні тури
+            </a>
+          </div>
+        </div>
       </section>
 
-      <section class="about-section container" id="about">
-        <h2 class="section-title">Про нас</h2>
-        <h3>Подорожі, що змінюють</h3>
-        <p>
-          За плечима —<br />48 країн Європи, Азії та Північної Америки:<br />від
-          Грузії, Йорданії та Ізраїлю<br />до Ісландії, Канади та США.
-        </p>
-        <!-- <svg class="around-the-world-icon">
-          <use
-            href="./public/travel-around-the-world-world-svgrepo-com.svg"
-          ></use>
-        </svg> -->
+      <section class="about-section" id="about">
+        <div class="container">
+          <h2 class="section-title">Про нас</h2>
+          <h3>Подорожі, що змінюють</h3>
+          <p>
+            За плечима —<br />48 країн Європи, Азії та Північної Америки:<br />від
+            Грузії, Йорданії та Ізраїлю<br />до Ісландії, Канади та США.
+          </p>
+          <!-- <svg class="around-the-world-icon">
+            <use
+              href="./public/travel-around-the-world-world-svgrepo-com.svg"
+            ></use>
+          </svg> -->
 
-        <h3>Подорожі з нами — це:</h3>
-        <ul class="about-list">
-          <li>Лайфхаки та інсайти, перевірені власним досвідом</li>
-          <li>Атмосфера дружньої компанії, де кожен відчуває себе своїм</li>
-          <li>Вихід із зони комфорту в найприємніший спосіб</li>
-          <li>Курйозні історії та моменти, які пам’ятаєш все життя</li>
-        </ul>
-        <p class="final-text-about">
-          Ми створюємо пригоди, що надихають рухатися далі. Приєднуйтесь до
-          <strong>Kati Trip</strong> — і давайте відкривати світ разом!
-        </p>
+          <h3>Подорожі з нами — це:</h3>
+          <ul class="about-list">
+            <li>Лайфхаки та інсайти, перевірені власним досвідом</li>
+            <li>Атмосфера дружньої компанії, де кожен відчуває себе своїм</li>
+            <li>Вихід із зони комфорту в найприємніший спосіб</li>
+            <li>Курйозні історії та моменти, які пам’ятаєш все життя</li>
+          </ul>
+          <p class="final-text-about">
+            Ми створюємо пригоди, що надихають рухатися далі. Приєднуйтесь до
+            <strong>Kati Trip</strong> — і давайте відкривати світ разом!
+          </p>
+        </div>
       </section>
 
-      <section class="advantages-section container">
-        <h2 class="section-title">Чому обирають Kati Trip?</h2>
-        <ul class="advantages-list">
-          <li>
-            Малі групи 4–7 людей — тепло, комфорт і справжня дружня атмосфера.
-          </li>
-          <li>Супровід 24/7 — ми завжди поруч, щоб підтримати і допомогти.</li>
-          <li>
-            Груповий чат до і під час подорожі — спілкування, поради та обмін
-            емоціями на кожному кроці.
-          </li>
-          <li>
-            Tips for Trips — практичні лайфхаки, які допоможуть подорожувати
-            легко і впевнено.
-          </li>
-          <li>
-            Індивідуальний підхід і увага до деталей — кожен важливий для нас.
-          </li>
-        </ul>
+      <section class="advantages-section">
+        <div class="container">
+          <h2 class="section-title">Чому обирають Kati Trip?</h2>
+          <ul class="advantages-list">
+            <li>
+              Малі групи 4–7 людей — тепло, комфорт і справжня дружня атмосфера.
+            </li>
+            <li>
+              Супровід 24/7 — ми завжди поруч, щоб підтримати і допомогти.
+            </li>
+            <li>
+              Груповий чат до і під час подорожі — спілкування, поради та обмін
+              емоціями на кожному кроці.
+            </li>
+            <li>
+              Tips for Trips — практичні лайфхаки, які допоможуть подорожувати
+              легко і впевнено.
+            </li>
+            <li>
+              Індивідуальний підхід і увага до деталей — кожен важливий для нас.
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section class="actual container" id="actual"></section>
