add around the world icon

--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
             За плечима —<br />48 країн Європи, Азії та Північної Америки:<br />від
             Грузії, Йорданії та Ізраїлю<br />до Ісландії, Канади та США.
           </p>
-          <!-- <svg class="around-the-world-icon">
+          <svg class="around-the-world-icon">
             <use
-              href="./public/travel-around-the-world-world-svgrepo-com.svg"
+              href="./public/airplane-flight-around-the-planet-svgrepo-com.svg"
             ></use>
-          </svg> -->
+          </svg>
 
           <h3>Подорожі з нами — це:</h3>
           <ul class="about-list">
