--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/travel.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/public/travel-around-the-world-world-svgrepo-com.svg"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Travel Site</title>
     <link
@@ -36,10 +40,14 @@
             </li>
           </ul>
         </nav> -->
-
+          <a href="" class="conversation-link">
+            <svg class="conversation-icon">
+              <use href="./public/icons.svg#conversation-icon"></use>
+            </svg>
+          </a>
           <button class="menu-button" type="button">
             <svg class="menu-icon">
-              <use href="./public/icons.svg#icon-burger"></use>
+              <use href="./public/icons.svg#menu-icon"></use>
             </svg>
           </button>
         </div>
@@ -70,9 +78,7 @@
           </p>
           <div class="icon-container">
             <svg class="around-the-world-icon">
-              <use
-                href="./public/airplane-flight-around-the-planet-svgrepo-com.svg"
-              ></use>
+              <use href="./public/icons.svg#around-the-world-icon"></use>
             </svg>
           </div>
 
