--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div>Trip</div></a
           >
 
-          <!-- <div id="desctop-navigation"></div> -->
+          <div id="desctop-navigation" class="desctop-navigation"></div>
 
           <!-- <nav>
           <ul class="nav-list">
@@ -51,7 +51,13 @@
             </svg>
           </button>
         </div>
-        <div id="mobile-navigation"></div>
+        <div id="mobile-navigation" class="mobile-navigation">
+          <button class="menu-close-btn" type="button">
+            <svg class="menu-close-icon">
+              <use href="./public/icons.svg#close-icon"></use>
+            </svg>
+          </button>
+        </div>
       </div>
     </header>
 
