add styles for mobile nav

--- a/index.html
+++ b/index.html
@@ -29,17 +29,6 @@
 
           <div id="desctop-navigation" class="desctop-navigation"></div>
 
-          <!-- <nav>
-          <ul class="nav-list">
-            <li><a href="#about">Про нас</a></li>
-            <li><a href="">Актуальні тури</a></li>
-            <li><a href="">Про бронювання</a></li>
-            <li><a href="">Попередні тури</a></li>
-            <li>
-              <a href="">Контакти </a>
-            </li>
-          </ul>
-        </nav> -->
           <a href="" class="conversation-link">
             <svg class="conversation-icon">
               <use href="./public/icons.svg#conversation-icon"></use>
@@ -51,12 +40,14 @@
             </svg>
           </button>
         </div>
-        <div id="mobile-navigation" class="mobile-navigation">
-          <button class="menu-close-btn" type="button">
-            <svg class="menu-close-icon">
-              <use href="./public/icons.svg#close-icon"></use>
-            </svg>
-          </button>
+        <div class="mobile-nav-back">
+          <div id="mobile-navigation" class="mobile-navigation">
+            <button class="menu-close-btn" type="button">
+              <svg class="menu-close-icon">
+                <use href="./public/icons.svg#close-icon"></use>
+              </svg>
+            </button>
+          </div>
         </div>
       </div>
     </header>
